--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ html{
 
 
 .navbar-item{
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: 'Megrim', cursive;
   font-weight: bolder;
   color: black;
@@ -32,7 +32,7 @@ html{
 
 
 div.hero-body {
-  background-image: url('../img/joao-victor-alves-de-bastos-XePA2ecP5Vc-unsplash.jpg');
+  background-image: url('../img/concert2.jpg');
   background-size: cover;
   background-position: center center;
   background-color: black;
@@ -45,13 +45,15 @@ p{
 
 .subtitle{
   font-family: 'Carter One', cursive;
-  color: white;
+  color: whitesmoke;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 }
 
 
 p.title.is-1.has-text-right {
 color: whitesmoke;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 
@@ -97,5 +99,42 @@ img:hover { transform: scale(.9); }
   .audioplayback{
     margin: 0;
   }
+
+}
+
+@media only screen and (min-height: 1000px) {
+
+
+  .navbar-brand {
+    background-color: black;
+    box-shadow: none;
+    border: none;
+  }
+
+  .navbar-item{
+    color: whitesmoke;
+  }
+
+  .navbar-menu.is-active{
+background-color: black;
+box-shadow: none;
+border: none;
+}
+
+
+.subtitle{
+ font-size: 30px;
+
+}
+
+
+p.title.is-1.has-text-right {
+font-size: 80px;
+}
+
+
+input.input {
+  height: 3vh;
+}
 
 }
